# doctester

./: setup.cfg
src/doctester/: app.py  doctester.py  file_utils.py
utils/: doctester.py  infix.py  run-doctest  utils.py
