[metadata]
name = doctester
version = attr: doctester.__version__
author = Jason Thomas
author_email = jason.thomas.dev@proton.me
description = Runs all python doctests in a directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jlookup/doctester
project_urls =
    Bug Tracker = https://github.com/jlookup/doctester/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click>=8.1.7
test_suite = tests
tests_require = 
    pytest >=7.1.1
setup_requires = 
    setuptools >=42
    wheel

[options.extras_require]
test = pytest >=7.1.1
dev = pytest >=7.1.1

[options.packages.find]
where = src
exclude =
    dev*
    tests*

[options.entry_points]
console_scripts =
    doctester = doctester.app:main
